# jv

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Rocket.toml  db.sqlite3  deploy.sh
.github/workflows/: deploy.yaml
html/: index.html
src/: catchers.rs  constants.rs  errors.rs  main.rs  middleware.rs  tera_utils.rs
src/auth/: pw_utils.rs
src/db/: queries.rs
src/models/: models.rs
src/routes/: css.rs  galleries.rs  img.rs  index.rs  js.rs  login.rs  logout.rs  signup.rs
ssl/: localhost.crt  localhost.key
templates/: awaiting_verification.html  base.html  galleries.html  gallery.html  image_item.html  index.html  lightbox.html  login.html  macros.html  new_gallery.html  signup.html  upload_form.html  verify_signup.html  welcome.html
templates/css/: style.css
templates/js/: galleries.js  gallery.js  upload.js  validate_signup.js
