[package]
name = "john_rocket"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
chrono = "0.4.38"
lazy_static = "1.5.0"
rocket = {version = "0.5.1", features = ["tls", "secrets"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
tera = { version = "1", default-features = false }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
