[package]
name = "john_rocket"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
chrono = "0.4.38"
chrono-humanize = "0.2.3"
env_logger = "0.11.5"
image = "0.25.5"
lazy_static = "1.5.0"
log = "0.4.22"
reqwest = "0.12.9"
rocket = {version = "0.5.1", features = ["tls", "secrets"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
tera = { version = "1", default-features = false }
serde_json = "1.0"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
